# Nitrado-SDK

./: .gitignore  AccessToken.py  Client.py  GameServer.py  LICENSE  Nitrapi.py  README.md  client.py  game_server.py  install_locally.sh  log_information.txt  nitrado_api.py  ocr.py  pyproject.toml  reinstall.sh  reinstall_test_package.sh  requirements.txt  requirements_dev.txt  service.py  setup.cfg  stuff.txt  test_requirements_pypi.txt  tox.ini  upload_to_pypi.sh  upload_to_testpypi.sh
.github/workflows/: tests.yml
logs/: restart.txt  shooter_games.txt  shooter_games_last.txt
scripts/: install_locally.sh  install_production.sh  install_requirements.sh  install_test_requirements.sh  reinstall_package.sh  reinstall_test_package.sh  uninstall_non_requirements.sh  uninstall_requirements.sh  uninstall_test_requirements.sh  update_latest_requirements.sh  update_latest_test_requirements.sh  upload_to_pypi.sh  upload_to_testpypi.sh
src/: __init__.py  game_server.py  nitrado_api.py  service.py
src/nitrado/: __init__.py  ark_server.py  client.py  game_server.py  nitrado.py  nitrado_api.py  service.py
src/nitrado.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nitrado/games/: __init__.py  ark_survival.py
src/nitrado/gameserver/: __init__.py  credentials.py  gameserver.py  host_systems.py  operating_system.py  players.py
src/nitrado/globals/: __init__.py  game.py  globals.py  locations.py  maintenance.py  token.py
src/nitrado/lib/: __init__.py  client.py  errors.py  game_server.py  service.py
src/nitrado/service/: __init__.py  action.py  arguments.py  details.py  log.py  logs_page.py  notification.py  service.py  task.py
src/nitrado/tools/: __init__.py  client.py
tests/: test_arkserver.py  test_client.py  test_connection.py  test_game_server.py  test_nitrado_api.py  test_service.py
tests/mocked_client/: __init__.py  mocked_client.py  test_client.py
(+32 files in other folders)
