[metadata]
name = nitrado
version = 0.0.5
author = Mauricio
author_email = dev.mauricio.lomeli@gmail.com
description = This application accesses the Nitrado API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjlomeli/NitradoAPI
project_urls =
    Bug Tracker = https://github.com/mjlomeli/NitradoAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    wheel
    requests

[options.packages.find]
where = src