[metadata]
name = nitrado
version = 1.0.6
test_version = 1.0.6
production_version = 1.0.6
author = Mauricio
author_email = dev.mauricio.lomeli@gmail.com
description = This application accesses the Nitrado API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjlomeli/NitradoAPI
project_urls =
    Bug Tracker = https://github.com/mjlomeli/NitradoAPI/issues
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    wheel
    requests==2.*

[options.packages.find]
where = src


# Just Dev Dependencies (e.g. not for production)
[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
nitrado = py.typed

[flake8]
max-line-length = 160
